--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ h3 {
 }
 /* -------------footer---------------*/
 footer p {
-  background-color: #a98f4a;
-  color: #3d062f;
+  background-color: #525252;
+  color: #efefef;
   font-size: 0.85rem;
   margin-bottom: 0; 
 }
