--- a/style.css
+++ b/style.css
@@ -1,82 +1,20 @@
-/* -------------global style---------------*/
-html {
-  font-size: 1rem;
-}
-body {
-    background-color: #efefef; 
-    font-family: 'Open Sans', sans-serif;
-    color: #1b1d1e;
-    line-height: 1.5;
-    margin: 0; 
-}
-p {
-  text-align: center;
-  font-size: 1rem;
-}
-a {
-  text-decoration: none;
-}
-a:hover {
-  font-weight: bold;
-}
-/* -------------header & pic---------------*/
-h1 {
+html, body{
+  height: 100%; 
+  background-color: lightblue; 
   text-align: center; 
 }
-img {
-  max-width: 100%;
-  display: block;
-  height: auto;
-  margin: 0 auto;
+
+.container{
+  height: 100%; 
+  display: flex; 
 }
-img+p {
-  font-size: 0.9rem;
+
+.item{
+  width: 35%;
+  margin: auto; 
+  border: solid black 1px; 
 }
-/* -------------main---------------*/
-h2 {
-  font-size: 1.1rem; 
-  text-align: center;
-}
+
 ul {
-  list-style: none;
-  width: 38em;
-  margin: 10px auto 30px auto;
-}
-.year {
-  font-weight: bold;
-}
-ul+p {
-  font-weight: 700;
-}
-ul~p {
-  color: #0e4f7a;
-  font-style: italic;
-}
-h3 {
-  text-align: center;
-  font-size: 1.2rem;
-  margin-top: 30px;
-}
-/* -------------footer---------------*/
-footer p {
-  background-color: #525252;
-  color: #efefef;
-  font-size: 0.85rem;
-  margin-bottom: 0; 
-}
-/* -----------responsive-------------*/
-@media (max-width:712px) {
-  html {
-    font-size: 0.85rem;
-  }
-  h1 {
-    line-height: 1;
-  }
-  
-  ul {width: 80vw;
-      margin: 0 auto;
-  }
-  img {
-    max-width: 80%;
-  }
+  text-align: left; 
 }
